Replace System.out with log.info